force-app/main/default/objects/Demographic_Profile__c/Demographic_Profile__c.object-meta.xml
<CustomObject>
    <description>Auto-generated demographic profile identifier

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Demographic Profile</label>
    <nameField>
        <displayFormat>DEM-{00000}</displayFormat>
        <label>Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demographic Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>