force-app/main/default/objects/Demographic_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the demographic profile to the Region Account in CGC hierarchy 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Region</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demographic Profiles</relationshipLabel>
    <relationshipName>Demographic_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>