force-app/main/default/objects/Demographic_Profile__c/fields/Age_Index_25_40__c.field-meta.xml
<CustomField>
    <fullName>Age_Index_25_40__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Percentage of population in the 25–40 age cohort; primary consumption segment</inlineHelpText>
    <label>Age Index (25-40)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>