force-app/main/default/objects/Demographic_Profile__c/fields/As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>As_Of_Date__c</fullName>
    <description>Date to which the demographic data is current; drives data freshness alerts 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>As Of Date</label>
    <type>Date</type>
</CustomField>