force-app/main/default/objects/Demographic_Profile__c/fields/Composite_Demand1__c.field-meta.xml
<CustomField>
    <fullName>Composite_Demand1__c</fullName>
    <formula>(Age_Index_25_40__c * 100 * 0.30)
+ (Urbanization_Score__c * 0.40)
+ (Footfall_Estimate__c / 1000 * 0.30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Composite Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>