force-app/main/default/objects/Demographic_Profile__c/fields/Composite_Demand__c.field-meta.xml
<CustomField>
    <fullName>Composite_Demand__c</fullName>
    <label>Composite Demand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>