force-app/main/default/objects/Demographic_Profile__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>Origin of the demographic data record 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Census of India</fullName>
            </value>
            <value>
                <fullName>NSSO</fullName>
            </value>
            <value>
                <fullName>Experian</fullName>
            </value>
            <value>
                <fullName>CRISIL</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>