force-app/main/default/objects/Demographic_Profile__c/fields/Footfall_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Footfall_Estimate__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Average daily footfall estimate from Experian/CRISIL or government commercial data</inlineHelpText>
    <label>Footfall Estimate</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>