force-app/main/default/objects/Demographic_Profile__c/fields/Income_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Income_Bracket__c</fullName>
    <description>Average household income classification 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Income Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower</fullName>
            </value>
            <value>
                <fullName>Lower-Mid</fullName>
            </value>
            <value>
                <fullName>Upper-Mid</fullName>
            </value>
            <value>
                <fullName>Upper</fullName>
            </value>
            <value>
                <fullName>Affluent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>