force-app/main/default/objects/Demographic_Profile__c/fields/Literacy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Literacy_Rate__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Literacy percentage from Census of India; proxy for digital payment adoption</inlineHelpText>
    <label>Literacy Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>