force-app/main/default/objects/Demographic_Profile__c/fields/PIN_Code__c.field-meta.xml
<CustomField>
    <fullName>PIN_Code__c</fullName>
    <description>PIN code of the area; primary join key to Census / NSSO and private data sources 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <externalId>true</externalId>
    <label>PIN Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>