force-app/main/default/objects/Demographic_Profile__c/fields/Population__c.field-meta.xml
<CustomField>
    <fullName>Population__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Population</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>