force-app/main/default/objects/Demographic_Profile__c/fields/Urbanization_Score__c.field-meta.xml
<CustomField>
    <fullName>Urbanization_Score__c</fullName>
    <description>Normalized urbanization index 0–100 for the PIN code area 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Urbanization Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>