force-app/main/default/objects/Demographic_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Data_Source__c</columns>
    <columns>Footfall_Estimate__c</columns>
    <columns>PIN_Code__c</columns>
    <columns>Population__c</columns>
    <columns>Composite_Demand1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>